--- a/#src/_footer-2.html
+++ b/#src/_footer-2.html
@@ -5,19 +5,19 @@
                 <img src="../fsk/img/logo.png" alt="логотип фск">
             </div>
             <div class="footer__address">
-                <p>Центральный офис продаж:</p>
-                <span>Большой пр. ПС, д.48, лит.А, 1 эт.</span>
+                <p>Ваш менеджер:</p>
+                <span>Иванов Иван Жамалетдинов</span>
             </div>
 
             <div class="footer__contacts">
-                <a href="tel:+7(812)703-55-55">
+                <a href="tel:+7(123)456-78-90">
                     <svg width="20" height="20" viewBox="0 0 48 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M13.9694 25.8782C15.4842 30.5755 18.5316 34.6285 22.6235 37.3881C22.9233 37.5869 23.2697 37.7042 23.6287 37.7285C23.9876 37.7527 24.3467 37.6831 24.6705 37.5264L31.7679 34.1405C32.0818 33.9907 32.4281 33.9216 32.7755 33.9395C33.1228 33.9573 33.4602 34.0616 33.7571 34.2427L45.1246 41.1789C45.511 41.4129 45.8108 41.7662 45.979 42.1855C46.1471 42.6048 46.1744 43.0674 46.0568 43.5036C45.2425 46.4448 43.3841 48.9884 40.8295 50.6581C38.2749 52.3278 35.1993 53.009 32.1785 52.5743C22.8487 51.2313 14.4346 46.2369 8.78711 38.6901C3.13965 31.1432 0.721468 21.662 2.06455 12.3322C2.49956 9.31148 4.0207 6.55291 6.34315 4.57299C8.66561 2.59307 11.6301 1.52756 14.6816 1.57599C15.1332 1.58617 15.5693 1.74285 15.9242 2.02243C16.279 2.302 16.5334 2.68933 16.649 3.12604L20.1001 15.9997C20.1893 16.3327 20.1949 16.6825 20.1162 17.0182C20.0375 17.3538 19.877 17.6648 19.6491 17.9234L14.3993 23.8791C14.1609 24.1467 13.9959 24.4715 13.9206 24.8219C13.8452 25.1723 13.8621 25.5363 13.9694 25.8782V25.8782Z"
                             stroke="#FC4C02" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
-                    <span>+7 (812) 703-55-55</span></a>
-                <a href="mailto:info@fsknw.ru">
+                    <span>+7 (123) 456-78-90</span></a>
+                <a href="mailto:i.jamaletdinov@fsknw.ru">
                     <svg width="20" height="22" viewBox="0 0 57 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M55 19.5722V48.127C55 48.7096 54.7673 49.2683 54.3532 49.6802C53.9391 50.0921 53.3774 50.3235 52.7917 50.3235H4.20833C3.62265 50.3235 3.06095 50.0921 2.64681 49.6802C2.23266 49.2683 2 48.7096 2 48.127V19.5722L28.5 2L55 19.5722Z"
@@ -30,7 +30,7 @@
                             stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
 
-                    <span>info@fsknw.ru</span></a>
+                    <span>i.jamaletdinov@fsknw.ru</span></a>
             </div>
         </div>
     </div>
