--- a/#src/_plan.html
+++ b/#src/_plan.html
@@ -3,15 +3,15 @@
         <div class="plan__inner">
             <div class="plan__pictures plan__pictures--left">
                 <div class="plan__big">
-                    <img src="../img/big-plan.png" alt="план квартиры">
+                    <img src="../fsk/img/big-plan.png" alt="план квартиры">
                 </div>
             </div>
             <div class="plan__pictures plan__pictures--right">
                 <div class="plan__floor plan__floor--upper">
-                    <img src="../img/floor-plan.png" alt="план квартиры">
+                    <img src="../fsk/img/floor-plan.png" alt="план квартиры">
                 </div>
                 <div class="plan__floor plan__floor--lower">
-                    <img src="../img/area-plan.jpg" alt="план местности">
+                    <img src="../fsk/img/area-plan.jpg" alt="план местности">
                 </div>
             </div>
         </div>
