--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="footer__content">
             <div class="footer__logo">
-                <img src="../fsk/img/logo.png" alt="логотип фск">
+                <img src="../img/logo.png" alt="логотип фск">
             </div>
             <div class="footer__address">
                 <p>Центральный офис продаж:</p>
